<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RutasEstCRUD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/cuadro_azul"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/titulos_redondeados"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/return_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/btn_redondeado"
                    android:contentDescription="@string/autentificacion_mf"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/atras"
                    app:cornerRadius="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/registro_ruta_estatica"
                    android:textColor="@color/white"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <EditText
            android:id="@+id/editText_IpDestino"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_border"
            android:digits="0123456789."
            android:hint="@string/edit_ipDestino"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:paddingHorizontal="20dp"
            android:singleLine="true"
            android:textColorHint="@color/gray"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_Mascara"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_border"
            android:digits="0123456789."
            android:hint="@string/edit_mascara"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:paddingHorizontal="20dp"
            android:singleLine="true"
            android:textColorHint="@color/gray"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_IpSalto"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_border"
            android:digits="0123456789."
            android:hint="@string/edit_ipSalto"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:paddingHorizontal="20dp"
            android:singleLine="true"
            android:textColorHint="@color/gray"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/edit_dispositivo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_dispositivo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/spinner_text_border"
            android:paddingHorizontal="10dp"
            android:theme="@style/SpinnerTheme"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/btn_anadir"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:text="@string/btn_anadir"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/btn_registrar_icon"
            app:iconSize="40dp" />

        <!-- Imagen final -->
        <ImageView
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:src="@drawable/rutas_est_bg" />

    </LinearLayout>

</FrameLayout>