<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EigrpCRUD">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/cuadro_azul"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/titulos_redondeados"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/return_btn"
                    android:layout_width="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    app:cornerRadius="40dp"
                    android:src="@drawable/atras"
                    android:contentDescription="@string/autentificacion_mf"
                    android:scaleType="centerInside"
                    android:background="@drawable/btn_redondeado"
                    android:adjustViewBounds="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/registro_vlan"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/editText_Vlan_Id"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/edit_id"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="10dp"
            android:textColorHint="@color/gray"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginBottom="30dp"
            android:maxLength="10"
            android:digits="0123456789"
            android:singleLine="true"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editText_Nombre_Vlan"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/edit_nombre"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="10dp"
            android:textColorHint="@color/gray"
            android:textStyle="bold"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:singleLine="true"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_dispositivo"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:id="@+id/spinner_dispositivo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/spinner_text_border"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="30dp"
            android:spinnerMode="dropdown"
            android:theme="@style/SpinnerTheme"/>

        <Button
            android:id="@+id/btn_anadir"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:text="@string/btn_anadir"
            android:backgroundTint="@color/green"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            app:icon="@drawable/btn_registrar_icon"
            app:iconSize="40dp"/>

        <!-- Imagen final -->
        <ImageView
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:src="@drawable/vlan_bg"
            android:layout_gravity="end"
            android:layout_marginTop="130dp"/>

    </LinearLayout>

</FrameLayout>